[gd_scene load_steps=10 format=3 uid="uid://cifg2nritn8t6"]

[ext_resource type="Script" path="res://Scripts/GraphNodes/NodeSentence.gd" id="1_at5jy"]
[ext_resource type="Texture2D" uid="uid://px17kflnvnd7" path="res://Assets/Icons/NodesIcons/Arrow01.svg" id="1_hvs86"]
[ext_resource type="Texture2D" uid="uid://bexlgpgwakbrr" path="res://Assets/Icons/NodesIcons/Arrow02.svg" id="2_5kymc"]
[ext_resource type="Script" path="res://addons/advanced-text/nodes/AdvancedTextLabel.gd" id="4_6ycci"]
[ext_resource type="Resource" uid="uid://74bogqdd04tt" path="res://Test/Data/markdown_settings.tres" id="5_puklo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ryo67"]
content_margin_left = 10.0
content_margin_top = 2.0
content_margin_right = 10.0
content_margin_bottom = 2.0
bg_color = Color(0.321569, 0.741176, 0.592157, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3cw0q"]
content_margin_left = 10.0
content_margin_top = 2.0
content_margin_right = 10.0
content_margin_bottom = 2.0
bg_color = Color(0.321569, 0.741176, 0.592157, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uoau8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pf2m4"]

[node name="SentenceNode" type="GraphNode" groups=["graph_nodes"]]
custom_minimum_size = Vector2(400, 100)
offset_right = 400.0
offset_bottom = 100.0
size_flags_vertical = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/titlebar = SubResource("StyleBoxFlat_ryo67")
theme_override_styles/titlebar_selected = SubResource("StyleBoxFlat_3cw0q")
title = "NodeSentence"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = ExtResource("1_hvs86")
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = ExtResource("2_5kymc")
slot/0/draw_stylebox = false
script = ExtResource("1_at5jy")

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextLabelPreview" type="RichTextLabel" parent="MainContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_uoau8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pf2m4")
bbcode_enabled = true
fit_content = true
scroll_following = true
script = ExtResource("4_6ycci")
parser = ExtResource("5_puklo")
